--- a/WEB/src/app/home/home.component.html
+++ b/WEB/src/app/home/home.component.html
@@ -4,8 +4,8 @@
             <div class="col-lg-12 ">
                 <a class="logo " href="#"><img src="assets/images/logo-edusure.png" alt=""></a>
                 <ul class="login-info">
-                    <li><button class="user" (click)="setupDayZero()" *ngIf="user.role=='ADMIN'"> <span>DayZero</span></button></li>
-                    <li>Last login {{ today | date:'MM/dd/yy h:mm:ss a' }}</li>
+                      <li>  <button type="button" class="btn" *ngIf="user.role=='ADMIN'" (click)="setupDayZero()">DAYZERO</button></li>
+                    <li>Last login {{ today | date:'MM/dd/yy h:mm:ss a'  | uppercase  }}</li>
                     <li><a class="info"><i class="fas fa-info-circle"></i></a></li>
                     <li><a class="user" [matMenuTriggerFor]="menu"><i class="fas fa-user"></i></a></li>
                 </ul>
@@ -29,18 +29,4 @@
 </header>
 <body> 
 <router-outlet></router-outlet>
-<footer class="footer-container">
-    <div class="container">
-        <div class="row clearfix">
-            <div class="col-md-6">
-                <select class="form-control">
-                    <option value="">English</option> 
-                </select>
-            </div>
-            <div class="col-md-6 text-right">
-                <p>Copyright, 2019 Company Name Rights Reserved, <a href="#">Terms and conditions</a></p>
-            </div>
-        </div>
-    </div>
-</footer>
 </body>
