changes for css

--- a/WEB/src/app/public/login/login.component.html
+++ b/WEB/src/app/public/login/login.component.html
@@ -1,8 +1,8 @@
-<body class="login-container ">
+<body class="login-container">
 <div class="d-flex align-items-stretch">
 	<div class="container-fluid">
 		<div class="row clearfix">
-			<div class="col-md-7 slider d-flex align-items-center" [ngStyle]="{background: 'url(./assets/images/login.jpg) left bottom no-repeat'}">
+			<div class="col-md-7 slider d-flex align-itms-center" [ngStyle]="{background: 'url(./assets/images/login.jpg) left bottom no-repeat'}">
 				<div class="welcome-text">
 					<h3>Welcome</h3>
 					<p>Grow yours business with us. Over 38,742 + insurance professionals already are. 
