--- a/WEB/src/app/public/login/login.component.scss
+++ b/WEB/src/app/public/login/login.component.scss
@@ -13,7 +13,7 @@ html,body{
   
   
   
-  .slider{  background-size: cover;height:100%;}
+  .slider{  background-size: cover !important; height:100%;}
   
   .signin h2 {margin:0 0 25px; text-align:left; font-size: 1.6rem;}
   .login-form{padding:50px   20px;}
@@ -24,8 +24,7 @@ html,body{
   
   .btn-login{background:#ED683D; padding:10px 60px; border-radius:40px; color:#FFFFFF; font-size:16px; border:0; margin:50px 0 30px 0}
   .btn-center{float:none; display:inline-block;}
-  
-  .welcome-text{float: right;  padding-left: 57%;}
+  .welcome-text{float: right;  padding-left: 57%; margin-top: 25%;}
   .welcome-text h3{color:#fff; font-size:24px; font-weight:500;}
   .welcome-text p{color:#fff; font-size:18px;}
   
