--- a/WEB/src/app/home/content-mgmnt/content-mgmnt.component.html
+++ b/WEB/src/app/home/content-mgmnt/content-mgmnt.component.html
@@ -6,19 +6,19 @@
           <h3>Hello, {{user.firstname | uppercase }} {{user.lastname | uppercase}}  What you are looking for?</h3>
         	<div class="d-flex justify-content-center">
               <div class="row">
-                <div class="col-md-4 form-group"> 
+                <div class="col-md-3 form-group"> 
                   <input type="text" placeholder="Select or type a class" class="form-control"  list="classList" [(ngModel)]="classdisplayName" (change)="onClassChange(classdisplayName)" />
                   <datalist id="classList">
                       <option *ngFor="let classDetail of classList" [value]="classDetail.displayName"><strong>{{classDetail?.displayName  | uppercase }}</strong></option>
                     </datalist>
                  </div>
-                <div class="col-md-4 form-group"> 
+                <div class="col-md-3 form-group"> 
                   <input type="text" placeholder="Select or type a subject" class="form-control"  list="classSubjectList" [(ngModel)]="subjectdisplayName" (change)="onSubjectChange(subjectdisplayName)"/> 
                   <datalist id="classSubjectList">
                       <option *ngFor="let classSubject of classSubjectList" [value]="classSubject.displayName" ><strong>{{classSubject?.displayName  | uppercase }}</strong></option>
                     </datalist>
                 </div> 
-                 <div class="col-md-4 form-group">
+                 <div class="col-md-6 form-group">
                   <input type="text" placeholder="Select or type a Chapter" class="form-control"  list="chapterList" [(ngModel)]="chapterdisplayName" (change)="onChapterChange(chapterdisplayName)"/>  
                   <datalist id="chapterList">
                       <option *ngFor="let chapter of chapterList" [value]="chapter.displayName" ><strong>{{chapter?.displayName  | uppercase }}</strong></option>
@@ -48,8 +48,8 @@
         </div>
       </div>
     </div>
-    <div class="row clearfix" *ngIf="favorites.length==0">
-        <h5 class="small-title mb-3">No Favourite Topics Avilable</h5>
+    <div *ngIf="favorites.length==0">
+        <h5 class="small-title mb-3 text-center">No Favourite Topics Avilable</h5>
     </div>
   </div>
 </div>
