--- a/WEB/src/app/public/login/login.component.html
+++ b/WEB/src/app/public/login/login.component.html
@@ -4,9 +4,7 @@
 		<div class="row clearfix">
 			<div class="col-md-7 slider d-flex align-itms-center" [ngStyle]="{background: 'url(./assets/images/login.jpg) left bottom no-repeat'}">
 				<div class="welcome-text">
-					<h3>Welcome</h3>
-					<p>Grow yours business with us. Over 38,742 + insurance professionals already are. 
-					<br><br>Contact 24x7 toll free number.</p>
+					<h3>No One can stop You , If You are determined"</h3>
 				</div>
 			</div>
 			<div class="col-md-5">
