--- a/WEB/src/app/home/content-mgmnt/topics/topic.scss
+++ b/WEB/src/app/home/content-mgmnt/topics/topic.scss
@@ -29,11 +29,11 @@ body  {
 	font-size:14px;
 	font-weight:300;
 	line-height:22px;
-	background-color: #eaeff4; 
+	background-color: #d6d6d6; 
 	height: 100%;
 }
 
-p{color:#727272;}
+p{color:#ffc107;}
 a{
 	text-decoration:none;
 }  
@@ -214,7 +214,7 @@ box-shadow: 1px 5px 5px 0px rgba(0,0,0,0.2); text-align:center; margin-bottom:30
 .class-box span{ display:block; background:rgba(0, 0, 0, .67); font-size:18px; color:#fff;  padding:10px;}
 .class-box p span{ display:inline-block; background:none; font-size:16px; color:#252525; font-weight:500;}
 
-.video-text{font-size:16px; color:#252525; font-weight:500; padding:15px 0 0}
+.video-text{font-size:16px; color:#002c58; font-weight:500; padding:15px 0 0}
 .video-text .fa-video{color:#FD1746; margin-right:5px;}
 
 .class-edit .fa-plus{ color:#00b30e}
