--- a/WEB/src/app/home/home.component.html
+++ b/WEB/src/app/home/home.component.html
@@ -2,7 +2,7 @@
     <div class="w-100">
         <div class="row clearfix">
             <div class="col-lg-12 ">
-                <a class="logo " href="#"><img src="assets/images/logo-edusure1.png" alt=""></a>
+                <a class="logo" (click)="navigateHome()"><img src="assets/images/logo-edusure1.png" alt=""></a>
                 <ul class="login-info">
                       <li>  <button type="button" class="btn" *ngIf="user.role=='ADMIN'" (click)="setupDayZero()">DAYZERO</button></li>
                     <li>Last login {{ today | date:'MM/dd/yy h:mm:ss a'  | uppercase  }}</li>
@@ -29,3 +29,12 @@
 </header>
 
 <router-outlet></router-outlet>
+<footer class="footer-container">
+        <div class="container-fluid">
+            <div class="row clearfix">
+                <div class="col-md-12 text-center">
+                    <p>Copyright, 2019  EduSure Rights Reserved, <a href="#">Terms and conditions</a></p>
+                </div>
+            </div>
+        </div>
+    </footer>
