--- a/WEB/src/app/public/login/login.component.html
+++ b/WEB/src/app/public/login/login.component.html
@@ -2,10 +2,8 @@
 <div class="d-flex align-items-stretch">
 	<div class="container-fluid">
 		<div class="row clearfix">
-			<div class="col-md-7 slider d-flex align-itms-center" [ngStyle]="{background: 'url(./assets/images/login.jpg) left bottom no-repeat'}">
-				<div class="welcome-text">
-					<h3>No One can stop You , If You are determined"</h3>
-				</div>
+			<div class="col-md-7 slider d-flex align-itms-center">
+			<app-slider></app-slider>
 			</div>
 			<div class="col-md-5">
 				<div class="login-form" *ngIf="displayView=='LOGIN'">
@@ -50,7 +48,7 @@
 					</div>
 
 				<div class="flex-footer">
-					<p>Copyrights, 2019 C2LBizAll Rights Reserved,</p> <a href="#" class="forget-pass">Terms and conditions</a>
+					<p>Copyrights, 2019 EduSure Rights Reserved,</p> <a  class="forget-pass">Terms and conditions</a>
 				</div>
 			</div>
 		</div>
