--- a/WEB/src/app/home/content-mgmnt/content-mgmnt.component.scss
+++ b/WEB/src/app/home/content-mgmnt/content-mgmnt.component.scss
@@ -109,6 +109,9 @@ a{
 padding-right: 15px;
 }
 
+.card-border {
+    border: 1.5px solid rgba(0,0,0,.125);
+}
 
 .like-icons a {
 	display: inline-block;
