--- a/WEB/src/app/home/home.component.html
+++ b/WEB/src/app/home/home.component.html
@@ -1,27 +1,30 @@
 <header class="container-fluid top-header d-flex align-items-center">
     <div class="w-100">
         <div class="row clearfix">
-            <div class="col-lg-12 ">
+            <div class="col-lg-12 " style="margin-top: 25px;">
                 <a class="logo" (click)="navigateHome()"><img src="assets/images/logo-edusure1.png" alt=""></a>
+                <div class="search-box col-md-6 form-group">
+                        <input type="text" placeholder="Type any key Words" class="form-control"  list="topicList" 
+                        [(ngModel)]="topicDisplayName" (change)="onTopicChange(topicDisplayName)"/>  
+                        <i *ngIf="topicDisplayName == null" class="fas fa-search search-icon"></i>
+                        <i *ngIf="topicDisplayName != null" class="fas fa-times search-icon" (click)="clear()"></i>
+                        <datalist id="topicList">
+                            <option *ngFor="let topic of topicList" [value]="topic.displayName" ><strong>{{topic?.displayName  | uppercase }}</strong></option>
+                          </datalist>
+                      </div> 
                 <ul class="login-info">
-                        <div class="col-md-6 form-group">
-                                <input type="text" placeholder="Type any key Words" class="form-control"  list="topicList" [(ngModel)]="topicDisplayName" (change)="onTopicChange(topicDisplayName)"/>  
-                                <datalist id="topicList">
-                                    <option *ngFor="let topic of topicList" [value]="topic.displayName" ><strong>{{topic?.displayName  | uppercase }}</strong></option>
-                                  </datalist>
-                              </div> 
-                      <button type="submit" class="btn btn-search" (click)="searchTopicDetails()">Search</button>
+                      
                       <li>  <button type="button" class="btn" *ngIf="user.role=='ADMIN'" (click)="setupDayZero()">DAYZERO</button></li>
                     <li>Last login {{ today | date:'MM/dd/yy h:mm:ss a'  | uppercase  }}</li>
                     <li><a class="info"><i class="fas fa-info-circle"></i></a></li>
                     <li><a class="user" [matMenuTriggerFor]="menu"><i class="fas fa-user"></i></a></li>
                 </ul>
                 <mat-menu #menu="matMenu">
-                    <button mat-menu-item>
+                    <button mat-menu-item (click)="viewProfile()">
                     <i class="fa fa-user" aria-hidden="true"></i>
                       <span>View Profile</span>
                     </button>
-                    <button mat-menu-item>
+                    <button mat-menu-item (click)="viewSessionReport()">
                      <i class="fa fa-calendar" aria-hidden="true"></i>
                       <span>View Session</span>
                     </button>
