--- a/WEB/src/app/home/home.component.scss
+++ b/WEB/src/app/home/home.component.scss
@@ -251,4 +251,26 @@ box-shadow: 1px 5px 5px 0px rgba(0,0,0,0.2); text-align:center; margin-bottom:30
 	.footer-container p{text-align:center; margin-top:15px;}
 	.search-container{background:#000;}
 }	 
- 
+ .search-box {
+	display: inline-block;
+    position: relative;
+    top: 8px;
+ }
+ .search-icon {
+	float: right;
+    position: relative;
+    bottom: 28px;
+    right: 33px;
+ }
+ .search-btn {
+	display: inline-block;
+    position: relative;
+    height: 30px;
+    font-size: 14px;
+    padding: 15px;
+    float: right;
+    bottom: 35px;
+	left: 119px;
+	line-height: 5px;
+	transform: none;
+ }
