changes for all download and encryption

--- a/WEB/src/app/public/register/register.component.html
+++ b/WEB/src/app/public/register/register.component.html
@@ -2,12 +2,8 @@
     <div class="d-flex align-items-stretch">
         <div class="container-fluid">
             <div class="row clearfix">
-                <div class="col-md-7 slider d-flex align-items-center" [ngStyle]="{background: 'url(./assets/images/login.jpg) left bottom no-repeat'}">
-                    <div class="welcome-text">
-                        <h3>Welcome</h3>
-                        <p>Grow yours business with us. Over 38,742 + insurance professionals already are.
-                            <br><br>Contact 24x7 toll free number.</p>
-                    </div>
+                <div class="col-md-7 slider d-flex align-itms-center">
+                    <app-slider></app-slider>
                 </div>
                 <div class="col-md-5">
                     <div class="login-form">
