--- a/WEB/src/app/public/license/license.component.html
+++ b/WEB/src/app/public/license/license.component.html
@@ -2,14 +2,10 @@
     <div class="d-flex align-items-stretch">
         <div class="container-fluid">
             <div class="row clearfix">
-                <div class="col-md-6 slider d-flex align-items-center" [ngStyle]="{background: 'url(./assets/images/login.jpg) left bottom no-repeat'}">
-                    <div class="welcome-text">
-                        <h3>Welcome</h3>
-                        <p>Grow yours business with us. Over 38,742 + insurance professionals already are.
-                            <br><br>Contact 24x7 toll free number.</p>
-                    </div>
+                <div class="col-md-7 slider d-flex align-itms-center">
+                    <app-slider></app-slider>
                 </div>
-                <div class="col-md-6">
+                <div class="col-md-5">
                     <div class="login-form">
                         <img src="assets/images/logo-edusure.png" alt="" />
                         <h3>Enter Your License</h3>
@@ -17,40 +13,36 @@
                             <div class="row clearfix">
                                 <div class="col-md-3">
                                     <div class="form-group">
-                                        <input matInput type="text" class="form-control" 
-                                        [(ngModel)]="licnkey.param1" name="username" placeholder="****"
-                                            required>
+                                        <input matInput type="text" class="form-control" [(ngModel)]="licnkey.param1" name="username" placeholder="****" required>
                                     </div>
                                 </div>
                                 <div class="col-md-3">
                                     <div class="form-group">
-                                        <input matInput type="text" class="form-control"
-                                            [(ngModel)]="licnkey.param2" name="param2" placeholder="****" required>
+                                        <input matInput type="text" class="form-control" [(ngModel)]="licnkey.param2" name="param2" placeholder="****" required>
                                     </div>
                                 </div>
                                 <div class="col-md-3">
                                     <div class="form-group">
-                                
-                                        <input matInput type="text" class="form-control"
-                                        [(ngModel)]="licnkey.param3" name="param3" placeholder="****" required>
+
+                                        <input matInput type="text" class="form-control" [(ngModel)]="licnkey.param3" name="param3" placeholder="****" required>
                                     </div>
                                 </div>
                                 <div class="col-md-3">
                                     <div class="form-group">
-                                        <input matInput type="text" class="form-control"
-                                            [(ngModel)]="licnkey.param4" name="param4" placeholder="****" required>
+                                        <input matInput type="text" class="form-control" [(ngModel)]="licnkey.param4" name="param4" placeholder="****" required>
                                     </div>
                                 </div>
                                 <p class="text-center">
-                                    <button type="button" class="btn-login" (click)="registerProduct()">Register
-                                        Product</button>
+                                    <button type="button" class="btn-login" (click)="registerProduct()">Register Product
+                                    </button>
                                 </p>
                             </div>
                         </div>
                     </div>
                     <div class="flex-footer">
-                        <p>Copyrights, 2019 EduSure Rights Reserved,</p> <a href="#" class="forget-pass">Terms and
-                            conditions</a>
+                        <p>Copyrights, 2019 EduSure Rights Reserved,</p>
+                        <a href="#" class="forget-pass">Terms and conditions
+                        </a>
                     </div>
                 </div>
             </div>
