--- a/WEB/src/app/home/content-mgmnt/topics/video-dialog.html
+++ b/WEB/src/app/home/content-mgmnt/topics/video-dialog.html
@@ -1,2 +1,4 @@
-<video  [src] = "videoURL" controls controlsList="nodownload">
-  </video>
+<h5>{{topic.displayName}}</h5>
+<button type="button" class="close" (click)="onNoClick()">&times;</button>
+<video [src]="videoURL" controls controlsList="nodownload">
+</video>
